*** empty log message ***

--- a/jollix/public_html/common/projectpage.html
+++ b/jollix/public_html/common/projectpage.html
@@ -19,10 +19,19 @@
 <table cellspacing="10" cellpadding="0" border="0">
 <tr><td bgcolor="#f2f2f2">
 Jollix linux is a community project developed by volunteers for game and multimedia enthusiasts.
-<br>This page will be the startpoint for the development teams which are organised by the popular <a href="http://www.mediawiki.org" target="_blank">mediawiki</a> wiki engine.<br>Each jollix development team is managed by a lead developer who moderates the wiki pages and the team discussion forum.<br>How to become involved in the development of jollix? If you are interested in supporting jollix with your skills in a particular area take contact to a lead developer and contribute everything that will bring jollix forward. People who have demonstrate their developing enthusiasm are registered as a regular jollix team developer at berlios.
+<br>This page will be the starting point for the development teams which are organised 
+by the popular <a href="http://www.mediawiki.org" target="_blank">mediawiki</a> wiki engine.<br>
+Each jollix development team is managed by a lead developer who moderates the wiki pages and the team discussion forum.<br>
+<b>How to become involved in the development of jollix?</b> If you are interested in supporting jollix with your skills in a particular area take contact to a lead developer and contribute everything that will bring jollix forward. People who have demonstrate their developing enthusiasm are registered as a regular jollix team developer at berlios.
 </td></tr>
 <tr><td bgcolor="#ECECEC">
-Jollix linux ist ein Community Projekt, das von Freiwilligen f&uuml;r Spiele- und Multimedia Begeisterte entwickelt wird.<br>Diese Seite stellt den Ausgangspunkt f&uuml;r die Entwicklungsteams dar, die sich selbst &uuml;ber die bekannte <a href="http://www.mediawiki.org" target="_blank">Mediawiki</a> Wiki Engine organsieren k&ouml;nnen.<br>Alle Entwicklungsteams werden von einem Hauptentwickler geleitet, der auch die Wiki Seiten und das Team Diskussions Forum moderiert.<br>Wie kann man an der Entwicklung von jollix teilnehmen? Alle Interessenten, die ihre Programmierf&auml;higkeiten in einem bestimmten Bereich der jollix Entwicklung zur Verf&uuml;gung stellen m&ouml;chten, nehmen bitte Kontakt zu einem der Hauptentwickler auf und k&ouml;nnen sofort alles, was ihnen f&uuml;r die weitere Entwicklung von jollix wichtig erscheint, &uuml;bermitteln. Als regul&auml;re jollix Entwickler werden alle diejenigen bei berlios registriert, die ihre Begeisterung am Entwicklungsprozess von jollix gezeigt haben.
+Jollix linux ist ein Community Projekt, das von Freiwilligen f&uuml;r Spiele- und Multimedia Begeisterte 
+entwickelt wird.<br>
+Diese Seite stellt den Ausgangspunkt f&uuml;r die Entwicklungsteams dar, die sich selbst 
+&uuml;ber die bekannte <a href="http://www.mediawiki.org" target="_blank">Mediawiki</a> 
+Wiki Engine organsieren k&ouml;nnen.<br>Alle Entwicklungsteams werden von einem Hauptentwickler 
+geleitet, der auch die Wiki Seiten und das Team Diskussions Forum moderiert.<br>
+<b>Wie kann man an der Entwicklung von jollix teilnehmen?</b> Alle Interessenten, die ihre Programmierf&auml;higkeiten in einem bestimmten Bereich der jollix Entwicklung zur Verf&uuml;gung stellen m&ouml;chten, nehmen bitte Kontakt zu einem der Hauptentwickler auf und k&ouml;nnen sofort alles, was ihnen f&uuml;r die weitere Entwicklung von jollix wichtig erscheint, &uuml;bermitteln. Als regul&auml;re jollix Entwickler werden alle diejenigen bei berlios registriert, die ihre Begeisterung am Entwicklungsprozess von jollix gezeigt haben.
 </td></tr>
 </table>
 
@@ -122,10 +131,10 @@ We are looking for dedicated developers to build up a jollix development team.</
 <tr><td bgcolor="#ffffff"><a name="b0">0. Games, native linux- and winex emulated</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
 <tr><td bgcolor="#f2f2f2"><a name="b1">1. Audio and video applications</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
 <tr><td bgcolor="#ffffff"><a name="b2">2. Network and messaging applications</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
-<tr><td bgcolor="#f2f2f2"><a name="b3">3. Network multimedia middleware (NMM)</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
-<tr><td bgcolor="#ffffff"><a name="b4">4. User utils</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="b3">3. Network Integrated Multimedia Middleware (NMM)</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="b4">4. User utilities</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
 <tr><td bgcolor="#f2f2f2"><a name="b5">5. Look and feel - Usability</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
-<tr><td bgcolor="#ffffff"><a name="b6">6. Desktop environements</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="b6">6. Desktop environments</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
 <tr><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td></tr>
 </table>
 
@@ -134,10 +143,10 @@ We are looking for dedicated developers to build up a jollix development team.</
 <tr><td width="20%" class="infohead" bgcolor="#eec625">Team<td class="infohead" bgcolor="#eec625">News and development status</td><td width="15%" class="infohead" bgcolor="#eec625">Lead developer</td><td width="15%" class="infohead" bgcolor="#eec625">Team members</td></tr>
 <tr><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td></tr>
 <tr><td bgcolor="#ffffff"><a name="d0">0. General documentation</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
-<tr><td bgcolor="#f2f2f2"><a name="d1">1. Internationalization</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
-<tr><td bgcolor="#ffffff"><a name="d2">2. Webside</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="d1">1. Internationalisation</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="d2">2. Website</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
 <tr><td bgcolor="#f2f2f2"><a name="d3">3. Betatesting  and community organisation</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2">ViVa_XXL</td><td bgcolor="#f2f2f2"></td></tr>
-<tr><td bgcolor="#ffffff"><a name="d4">4. Licence managment</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="d4">4. Licence management</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
 <tr><td bgcolor="#f2f2f2"><a name="d5">5. Installation assistent and documentation</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
 <tr><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td></tr>
 </table>
