*** empty log message ***

--- a/jollix/public_html/common/projectpage.html
+++ b/jollix/public_html/common/projectpage.html
@@ -44,7 +44,7 @@ We are looking for dedicated developers to build up a jollix development team.</
 <br><br><hr><br><br>
 
 <p class="chaphead"><span class="chapnum">2.</span>Teams overview</p>
-<table cellspacing="0" cellpadding="0" border="0">
+<table cellspacing="10" cellpadding="0" border="0">
 <tr><td valign="top">
 <p>Core system</p>
 <ul>
@@ -85,7 +85,7 @@ We are looking for dedicated developers to build up a jollix development team.</
 <ul>
 <li><a href="#d0">0. General documentation</a></li>
 <li><a href="#d1">1. Internationalization</a></li>
-<li><a href="#d2">2. Webside</a></li>
+<li><a href="#d2">2. Website</a></li>
 <li><a href="#d3">3. Betatesting  and community organisation</a></li>
 <li><a href="#d4">4. Licence managment</a></li>
 <li><a href="#d5">5. Installation assistent and documentation</a></li>
@@ -99,10 +99,11 @@ We are looking for dedicated developers to build up a jollix development team.</
 <table class="ntable" width="100%" cellspacing="0" cellpadding="10" border="0">
 <tr><td width="20%" class="infohead" bgcolor="#eec625">Team<td class="infohead" bgcolor="#eec625">News and development status</td><td width="15%" class="infohead" bgcolor="#eec625">Lead developer</td><td width="15%" class="infohead" bgcolor="#eec625">Team members</td></tr>
 <tr><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td></tr>
-<tr><td bgcolor="#ffffff"><a name="a0">0. Jollix linux kernel configuration</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
-<tr><td bgcolor="#f2f2f2"><a name="a1">1. Hardware detection and boot process</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="a0">0. Jollix linux kernel configuration</a><br><img src="../img/wiki.jpg" border="0"><img src="../img/phpBB.gif" border="0"><img src="../img/cvs.gif" border="0">
+</td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff">knochen</td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="a1">1. Hardware detection and boot process</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2">knochen</td><td bgcolor="#f2f2f2"></td></tr>
 <tr><td bgcolor="#ffffff"><a name="a2">2. System baselayout and init process</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
-<tr><td bgcolor="#f2f2f2"><a name="a3">3. LiveCD gcloop technology</td></a><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="a3">3. LiveCD gcloop technology</td></a><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2">knochen</td><td bgcolor="#f2f2f2"></td></tr>
 <tr><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td></tr>
 </table>
 
@@ -112,7 +113,7 @@ We are looking for dedicated developers to build up a jollix development team.</
 <tr><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td></tr>
 <tr><td bgcolor="#ffffff"><a name="c0">0. ATI drivers</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
 <tr><td bgcolor="#f2f2f2"><a name="c1">1. NVidia drivers</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
-<tr><td bgcolor="#ffffff"><a name="c2">2. Dialup, DSL and ISDN</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="c2">2. Dialup, DSL and ISDN</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff">patteh</td><td bgcolor="#ffffff"></td></tr>
 <tr><td bgcolor="#f2f2f2"><a name="c3">3. WLAN, Bluetooth, IRDA and Lirc</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
 <tr><td bgcolor="#ffffff"><a name="c4">4. Network configuration and assistents</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
 <tr><td bgcolor="#f2f2f2"><a name="c5">5. Firewire devices and DigitalVideo (DV)</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
@@ -131,7 +132,7 @@ We are looking for dedicated developers to build up a jollix development team.</
 <tr><td bgcolor="#ffffff"><a name="b0">0. Games, native linux- and winex emulated</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
 <tr><td bgcolor="#f2f2f2"><a name="b1">1. Audio and video applications</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
 <tr><td bgcolor="#ffffff"><a name="b2">2. Network and messaging applications</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
-<tr><td bgcolor="#f2f2f2"><a name="b3">3. Network Integrated Multimedia Middleware (NMM)</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="b3">3. Network Integrated Multimedia Middleware (NMM)</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2">patteh</td><td bgcolor="#f2f2f2"></td></tr>
 <tr><td bgcolor="#ffffff"><a name="b4">4. User utilities</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
 <tr><td bgcolor="#f2f2f2"><a name="b5">5. Look and feel - Usability</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
 <tr><td bgcolor="#ffffff"><a name="b6">6. Desktop environments</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
@@ -144,7 +145,7 @@ We are looking for dedicated developers to build up a jollix development team.</
 <tr><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td></tr>
 <tr><td bgcolor="#ffffff"><a name="d0">0. General documentation</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
 <tr><td bgcolor="#f2f2f2"><a name="d1">1. Internationalisation</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
-<tr><td bgcolor="#ffffff"><a name="d2">2. Website</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="d2">2. Website</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff">knochen<br>patteh</td><td bgcolor="#ffffff"></td></tr>
 <tr><td bgcolor="#f2f2f2"><a name="d3">3. Betatesting  and community organisation</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2">ViVa_XXL</td><td bgcolor="#f2f2f2"></td></tr>
 <tr><td bgcolor="#ffffff"><a name="d4">4. Licence management</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
 <tr><td bgcolor="#f2f2f2"><a name="d5">5. Installation assistent and documentation</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
