--- a/jollix/public_html/common/projectpage.html
+++ b/jollix/public_html/common/projectpage.html
@@ -108,7 +108,7 @@ We are looking for dedicated developers to build up a jollix development team.</
 </td>
 <td bgcolor="#ffffff"></td><td bgcolor="#ffffff">knochen</td><td bgcolor="#ffffff"></td></tr>
 
-<tr><td bgcolor="#f2f2f2"><a name="a1">1. Hardware detection and boot process</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2">knochen</td><td bgcolor="#f2f2f2"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="a1">1. Hardware detection and boot process</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2">knochen<br>genstef</td><td bgcolor="#f2f2f2"></td></tr>
 
 <tr><td bgcolor="#ffffff"><a name="a2">2. System baselayout and init process</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
 
@@ -178,7 +178,7 @@ We are looking for dedicated developers to build up a jollix development team.</
 
 <tr><td bgcolor="#f2f2f2"><a name="d1">1. Internationalisation</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
 
-<tr><td bgcolor="#ffffff"><a name="d2">2. Website</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff">knochen<br>patteh</td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="d2">2. Website/Wiki</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff">knochen<br>patteh</td><td bgcolor="#ffffff">ChrisSWCC</td></tr>
 
 <tr><td bgcolor="#f2f2f2"><a name="d3">3. Betatesting  and community organisation</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2">ViVa_XXL</td><td bgcolor="#f2f2f2"></td></tr>
 
