*** empty log message ***

--- a/jollix/public_html/common/projectpage.html
+++ b/jollix/public_html/common/projectpage.html
@@ -93,7 +93,16 @@ We are looking for dedicated developers to build up a jollix development team.</
 </td></tr>
 </table>
 
-<br><br><hr><br><br>
+<br><br><hr>
+<table class="ntable" width="75%" cellspacing="0" cellpadding="0" border="0">
+<tr><td colspan="3" valign="top"><a name="a0"><b>Legend:</b></a></td></tr><tr>
+<td valign="top"><a href="http://jollix.dylan4u.de/wiki/index.php/Main_Page" target="_blank"><img src="../img/wiki.jpg" border="0"></a></td>
+<td valign="top"><a href="http://jollix.berlios.de/phpBB2/" target="_blank"><img src="../img/phpBB.gif" border="0"></a></td>
+<td valign="top"><a href="http://cvs.berlios.de/cgi-bin/viewcvs.cgi/jollix/jollix/" target="_blank"><img src="../img/cvs.gif" border="0"></a></td>
+</tr>
+<tr><td><b>Developer wiki</b></td><td><b>Developer forums</b></td><td><b>Concurrent versions system [cvs]</b></td></tr>
+</table>
+<hr><br><br>
 
 <p class="chaphead"><span class="chapnum">3.</span><a name="system">Core system</a></p>
 <table class="ntable" width="100%" cellspacing="0" cellpadding="10" border="0">
@@ -102,11 +111,12 @@ We are looking for dedicated developers to build up a jollix development team.</
 
 <tr><td bgcolor="#ffffff">
 <table class="ntable" width="100%" cellspacing="0" cellpadding="0" border="0">
-<tr><td colspan="3" valign="top"><a name="a0">0. Jollix linux kernel configuration</a></td></tr>
-<tr><td><img src="../img/wiki.jpg" border="0"></td><td><img src="../img/phpBB.gif" border="0"></td><td><img src="../img/cvs.gif" border="0"></td>
+<tr><td colspan="3" valign="top"><a name="a0">0. Jollix linux kernel configuration</a></td></tr><tr>
+<td><a href="http://jollix.berlios.de/phpBB2/viewforum.php?f=20" target="_blank"><img src="../img/wiki.jpg" border="0"></a></td>
+<td><a href="http://jollix.berlios.de/phpBB2/viewforum.php?f=20" target="_blank"><img src="../img/phpBB.gif" border="0"></a></td>
+<td><a href="http://jollix.berlios.de/phpBB2/viewforum.php?f=20" target="_blank"><img src="../img/cvs.gif" border="0"></a></td>
 </tr></table>
-</td>
-<td bgcolor="#ffffff"></td><td bgcolor="#ffffff">knochen</td><td bgcolor="#ffffff"></td></tr>
+</td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff">knochen</td><td bgcolor="#ffffff"></td></tr>
 
 <tr><td bgcolor="#f2f2f2"><a name="a1">1. Hardware detection and boot process</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2">knochen<br>genstef</td><td bgcolor="#f2f2f2"></td></tr>
 
