*** empty log message ***

--- a/jollix/public_html/common/projectpage.html
+++ b/jollix/public_html/common/projectpage.html
@@ -96,7 +96,7 @@ We are looking for dedicated developers to build up a jollix development team.</
 <br><br><hr>
 <table class="ntable" width="75%" cellspacing="0" cellpadding="0" border="0">
 <tr><td colspan="3" valign="top"><a name="a0"><b>Legend:</b></a></td></tr><tr>
-<td valign="top"><a href="http://jollix.dylan4u.de/wiki/index.php/Main_Page" target="_blank"><img src="../img/wiki.jpg" border="0"></a></td>
+<td valign="top"><a href="http://jollix.dylan4u.de/wiki/index.php/TeamOverview" target="_blank"><img src="../img/wiki.jpg" border="0"></a></td>
 <td valign="top"><a href="http://jollix.berlios.de/phpBB2/" target="_blank"><img src="../img/phpBB.gif" border="0"></a></td>
 <td valign="top"><a href="http://cvs.berlios.de/cgi-bin/viewcvs.cgi/jollix/jollix/" target="_blank"><img src="../img/cvs.gif" border="0"></a></td>
 </tr>
@@ -112,9 +112,9 @@ We are looking for dedicated developers to build up a jollix development team.</
 <tr><td bgcolor="#ffffff">
 <table class="ntable" width="100%" cellspacing="0" cellpadding="0" border="0">
 <tr><td colspan="3" valign="top"><a name="a0">0. Jollix linux kernel configuration</a></td></tr><tr>
-<td><a href="http://jollix.berlios.de/phpBB2/viewforum.php?f=20" target="_blank"><img src="../img/wiki.jpg" border="0"></a></td>
+<td><a href="http://jollix.dylan4u.de/wiki/index.php/Jollix_linux_kernel_configuration" target="_blank"><img src="../img/wiki.jpg" border="0"></a></td>
 <td><a href="http://jollix.berlios.de/phpBB2/viewforum.php?f=20" target="_blank"><img src="../img/phpBB.gif" border="0"></a></td>
-<td><a href="http://jollix.berlios.de/phpBB2/viewforum.php?f=20" target="_blank"><img src="../img/cvs.gif" border="0"></a></td>
+<td><a href="http://cvs.berlios.de/cgi-bin/viewcvs.cgi/jollix/jollix/jollix_linux_kernel_configuration/" target="_blank"><img src="../img/cvs.gif" border="0"></a></td>
 </tr></table>
 </td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff">knochen</td><td bgcolor="#ffffff"></td></tr>
 
