*** empty log message ***

--- a/jollix/public_html/common/projectpage.html
+++ b/jollix/public_html/common/projectpage.html
@@ -188,7 +188,7 @@ We are looking for dedicated developers to build up a jollix development team.</
 
 <tr><td bgcolor="#f2f2f2"><a name="d1">1. Internationalisation</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
 
-<tr><td bgcolor="#ffffff"><a name="d2">2. Website/Wiki</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff">knochen<br>patteh</td><td bgcolor="#ffffff">ChrisSWCC</td></tr>
+<tr><td bgcolor="#ffffff"><a name="d2">2. Website/Wiki</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff">knochen<br>patteh<br>ChrisSWCC</td><td bgcolor="#ffffff"></td></tr>
 
 <tr><td bgcolor="#f2f2f2"><a name="d3">3. Betatesting  and community organisation</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2">ViVa_XXL</td><td bgcolor="#f2f2f2"></td></tr>
 
