*** empty log message ***

--- a/jollix/public_html/common/projectpage.html
+++ b/jollix/public_html/common/projectpage.html
@@ -79,6 +79,7 @@ We are looking for dedicated developers to build up a jollix development team.</
 <li><a href="#c8">8. DVD/CD Recording</a></li>
 <li><a href="#c9">9. Audio cards and technologies</a></li>
 <li><a href="#c10">10. Printers and scanners</a></li>
+<li><a href="#c11">11. HDD Controller</a></li>
 </ul>
 </td><td valign="top">
 <p>Documentation and organisation</p>
@@ -153,6 +154,8 @@ We are looking for dedicated developers to build up a jollix development team.</
 <tr><td bgcolor="#f2f2f2"><a name="c9">9. Audio cards and technologies</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
 
 <tr><td bgcolor="#ffffff"><a name="c10">10. Printers and scanners</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+
+<tr><td bgcolor="#ffffff"><a name="c11">11. HDD Controller</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff">ChrisSWCC</td><td bgcolor="#ffffff"></td></tr>
 
 <tr><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td></tr>
 </table>
